--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
                 android:text="@string/login_hello"
                 android:gravity="center"/>
         <Button
+                android:id="@+id/btn_loggin_enter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login_enter"
@@ -28,6 +29,7 @@
                 android:textColor="@color/white"
                 android:layout_marginTop="16dp"/>
         <com.github.rahatarmanahmed.cpv.CircularProgressView
+                android:id="@+id/cpv_loggin"
                 android:layout_width="@dimen/loader_size"
                 android:layout_height="@dimen/loader_size"
                 android:layout_marginTop="16dp"
