--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="loader_size">40dp</dimen>
+    <dimen name="avatar_size">40dp</dimen>
+    <dimen name="online_size">4dp</dimen>
 </resources>
